# arithmic_ai_agent

./: .gitignore  pyproject.toml
src/: main.py
